# rust-crud-firebase-demo

./: Cargo.toml  README.md
src/: main.rs
src/api/: cat.rs
