[package]
name = "rust-fb-crud"
version = "0.1.0"
authors=["nathan"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
firebase-rs = "2.0.5"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.21.2", features = ["full"] }
actix-web = "4"
serde_with = "2.1.0"
derive_more = "^0.99"
